@@ -24,6 +24,8 @@ import java.util.Enumeration;
 import java.util.Properties;
 import java.util.logging.Level;
 
+import javax.swing.tree.TreeNode;
+
 import org.compiere.model.MAcctSchemaElement;
 import org.compiere.model.MHierarchy;
 import org.compiere.model.MRole;
@@ -64,12 +66,6 @@ public class MReportTree
 			tree = new MReportTree (ctx, PA_Hierarchy_ID, ElementType);
 			s_trees.put(key, tree);
 		}
-		//MPo, 13/6/17 Additional Logging
-		CLogger static_log = CLogger.get();
-		static_log.log(Level.INFO, "MPo, Inside MReportTree=>get() Key: " + key);
-		static_log.log(Level.INFO, "MPo, Inside MReportTree=>get() Role: " + role.toString());
-		static_log.log(Level.INFO, "MPo, Inside MReportTree=>get() Tree: " + tree.toString());
-		//
 		return tree;	
 	}	//	get
 
@@ -256,13 +252,11 @@ public class MReportTree
 		StringBuffer result = null;
 		if (node != null && node.isSummary ())
 		{
-			
-			@SuppressWarnings("unchecked")
-			Enumeration<MTreeNode> en = (Enumeration<MTreeNode>)node.preorderEnumeration ();
+			Enumeration<TreeNode> en = node.preorderEnumeration ();
 			StringBuffer sb = new StringBuffer ();
 			while (en.hasMoreElements ())
 			{
-				MTreeNode nn = en.nextElement ();
+				MTreeNode nn = (MTreeNode)en.nextElement ();
 				if (!nn.isSummary ())
 				{
 					if (sb.length () > 0)
@@ -295,16 +289,11 @@ public class MReportTree
 	 */	
 	public Integer[] getChildIDs (int ID)
 	{
-		//MPo, 9/6/17
-		//if (log.isLoggable(Level.FINE)) log.fine("(" + m_ElementType + ") ID=" + ID);
-		if (log.isLoggable(Level.INFO)) log.info("(" + m_ElementType + ") ID=" + ID);
-		//
+		if (log.isLoggable(Level.FINE)) log.fine("(" + m_ElementType + ") ID=" + ID);
 		ArrayList<Integer> list = new ArrayList<Integer>(); 
 		//
 		MTreeNode node = m_tree.getRoot().findNode(ID);
-		//MPo, 9/6/17
-		//if (log.isLoggable(Level.FINEST)) log.finest("Root=" + node);
-		if (log.isLoggable(Level.INFO)) log.info("Root=" + node);
+		if (log.isLoggable(Level.FINEST)) log.finest("Root=" + node);
 		//
 		if (node != null && node.isSummary())
 		{
@@ -314,21 +303,15 @@ public class MReportTree
 				MTreeNode nn = (MTreeNode)en.nextElement();
 				if (!nn.isSummary())
 				{
-					list.add(new Integer(nn.getNode_ID()));
-					//MPo, 9/6/17
-					//if (log.isLoggable(Level.FINEST)) log.finest("- " + nn);
-					if (log.isLoggable(Level.INFO)) log.info("- " + nn);
-					//
+					list.add(Integer.valueOf(nn.getNode_ID()));
+					if (log.isLoggable(Level.FINEST)) log.finest("- " + nn);
 				}
 				else
-					//MPo, 9/6/17
-					//if (log.isLoggable(Level.FINEST)) log.finest("- skipped parent (" + nn + ")");
-					if (log.isLoggable(Level.INFO)) log.info("- skipped parent (" + nn + ")");
-					//
+					if (log.isLoggable(Level.FINEST)) log.finest("- skipped parent (" + nn + ")");
 			}
 		}
 		else	//	not found or not summary 
-			list.add(new Integer(ID));
+			list.add(Integer.valueOf(ID));
 		//
 		Integer[] retValue = new Integer[list.size()];
 		list.toArray(retValue);
